# streamer

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  activate-sdk.sh  copy-progs.sh  yocto-toolchain.cmake
client/: LICENSE  README.md  client.sh  client_gui.py  requirements.txt  test.py  venv-create.sh
src/: streamer.cpp
src/streamer/: application_streamer.cpp  application_streamer.hpp
